java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/ClassObjectAccessibility.java
@SomeAnnotation(<error descr="'Foo.Bar' has private access in 'Foo'">Foo.Bar</error>.class)
public class Foo{
  private static class Bar {
  }
}
@interface SomeAnnotation {
    Class value();
}
